Remove imports left over after merge